--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,1 +1,1 @@
-<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
+<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/breaking-videogames/feed.xml">
